--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-0": {
-            "resource\mobile\\": "src/"
+            "resource\\mobile\\": "src/"
         }
     }
 }
